...
    <string name="report_title_report_month">Report Month</string>
    <string name="report_title_report_week">Report Week</string>
    <string name="report_label_report_year">Report Year (YYYY)</string>
    <string name="report_title_start_date">Start Date</string>
    <string name="report_title_end_date">End Date</string>
    <string name="report_label_recent_days">Recent Days (N)</string>
    <string name="report_action_generate_report_md">Generate Report MD</string>

    <string name="report_title_stats_parameters">Stats Parameters</string>
    <string name="report_section_stats">Stats</string>
    <string name="report_action_loading">Loading...</string>
    <string name="report_action_generate_stats">Generate %1$s Stats</string>

    <string name="report_title_project_tree_parameters">Project Tree Parameters</string>
    <string name="report_section_tree">Tree</string>
    <string name="report_label_tree_level">Tree Level (-1 means unlimited)</string>
    <string name="report_action_load_project_tree">Load %1$s Project Tree</string>

...
