<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tracer</string>

    <string name="tracer_tab_data">Data</string>
    <string name="tracer_tab_report">Report</string>
    <string name="tracer_tab_record">Record</string>
    <string name="tracer_tab_txt">TXT</string>
    <string name="tracer_tab_config">Config</string>


    <string name="tracer_export_all_canceled">Export all canceled.</string>
...
